syntax = "proto3";

package main;

option go_package = "proto/gen;mainpb";

service UrlShortener {
  // Create a short URL for a given long URL
  rpc ShortenURL (ShortenURLRequest) returns (ShortenURLResponse);

  // Retrieve the original URL using the short ID
  rpc GetOriginalURL (GetOriginalURLRequest) returns (GetOriginalURLResponse);

  // Increment click counter whenever a short link is used
  rpc IncrementClick (IncrementClickRequest) returns (IncrementClickResponse);
}

message ShortenURLRequest {
  string original_url = 1;  
  int64 expire_in_seconds = 2; 
}

message ShortenURLResponse {
  string short_id = 1;      
  string short_url = 2;     
  string created_at = 3;    
  int64 expire_at = 4;      
}

message GetOriginalURLRequest {
  string short_id = 1;
}

message GetOriginalURLResponse {
  string original_url = 1;
}

message IncrementClickRequest {
  string short_id = 1;
}

message IncrementClickResponse {
  int64 clicks = 1;
}
